--- a/public/index.html
+++ b/public/index.html
@@ -105,5 +105,8 @@
 
     <script type="module" src="../src/main.js"></script>
     <script nomodule src="../src/bundle.js"></script>
+    <div style="font:12px/1.4 system-ui;opacity:0.6;padding:8px 12px;">
+      Build f237bcc
+    </div>
   </body>
 </html>
